# icanhazdadjoke-sdk

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  sdk.rs
src/models/: joke.rs  mod.rs  paginated_data.rs  paginated_joke.rs  pagination_opts.rs
