[package]
name = "icanhazdadjoke-sdk"
version = "0.1.0"
authors = ["Carter Snook <cartersnook04@gmail.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
description = "An SDK to interact with the icanhazdadjoke Dad Jokes API."
repository = "https://github.com/sno2/icanhazdadjoke-sdk/"
keywords = ["sdk", "dad-jokes", "jokes"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
hyper = { version = "0.14", features = ["http1", "runtime", "client", "stream"] }
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] } 
